# TUCAS_DEX_ORDERBOOK

./: .deployed-addresses  .gitignore  .test-tokens  ADVANCED_USER_GUIDE.md  BALANCE_TESTING_GUIDE.md  CHANGELOG.md  CODEBASE_EXPLANATION.md  COMPREHENSIVE_ANALYSIS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_DEPLOYMENT_READY.md  FRONTEND_INTEGRATION.md  LOCAL_TESTING_RESULTS.md  NEXT_STEPS_GUIDE.md  PITCH_SPEECH.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  README.md  REMOVE_TRADING_PAIR_MANAGER.md  SMART_CONTRACT_ANALYSIS.md  TECHNICAL_DOCUMENTATION.md  TOKEN_APPROVAL_FIX.md  TRADING_PAIR_IMPLEMENTATION_SUMMARY.md  TRADING_PAIR_MANAGEMENT.md  USER_GUIDE.md  YELLOW_NETWORK_INTEGRATION_ANALYSIS.md  YELLOW_NETWORK_INTEGRATION_PLAN.md  add-real-trading-pairs.sh  add-simple-pair.sh  add-trading-pair.sh  add-trading-pairs.sh  analyze-current-state.sh  complete-setup.sh  create-realistic-pairs.sh  create-test-tokens-manual.sh  deploy-real-tokens.sh  (+20 more)
contracts/: OrderBookDEX.sol  SimpleToken.sol  TestToken.sol
dex-frontend/: BALANCE_DISPLAY_FIX.md  COMPREHENSIVE_DEX_INTEGRATION_PLAN.md  CONSOLE_ERRORS_FIXED.md  CORS_TROUBLESHOOTING.md  ERROR_FIXES_SUMMARY.md  ETH_BALANCE_FIX.md  LICENSE  MAINNET_MIGRATION_SUMMARY.md  MOCK_VS_REAL_ANALYSIS.md  NAVBAR_FIXES_SUMMARY.md  NOTICE  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_CORE_FIXES_SUMMARY.md  PHASE_1_REAL_TESTING_GUIDE.md  PHASE_1_TESTING_DOCS.md  POOL_VERIFICATION_RESULTS.md  QUOTE_DEBUGGING.md  QUOTE_ERROR_FIX.md  README.md  REAL_VS_MOCK_QUOTE_ANALYSIS.md  (+16 more)
(+109 files in other folders)
